# rag-core

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.chroma/: chroma.sqlite3
.chroma_directory/: chroma.sqlite3
.github/workflows/: ci.yml
data/Audits/demo_workitem_001/: demo_workitem_001.html
data/Test/: Prompt.md  Test.csv  Test.docx  Test.html  Test.xlsx
docs/: index_llm_graph.puml  index_llm_uml.puml  index_ocr_graph.puml  index_ocr_uml.puml  retrieval_graph.puml  retriever_uml.puml
src/db_audit/audits/: audit.py  config.py  graph.py  prompts.py  report.py  schema.py  state.py
src/db_audit/rag/: index.py  retrieval.py
src/rag_app/config/: settings.py
src/rag_app/factory/: factory.py
src/rag_app/index/: config.py  extractor.py  graph.py  mapping.py  prompts.py  schema.py  state.py
src/rag_app/index/llm/: config.py  extractor.py  graph.py  mapping.py  prompts.py  schema.py  state.py
src/rag_app/index/ocr/: config.py  extractor.py  graph.py  loader.py  mapping.py  prompts.py  schema.py  state.py
src/rag_app/llm_enrichment/: llm_enrichment.py
src/rag_app/loader/: loader.py  schema.py
src/rag_app/prompts/: prompts.py
src/rag_app/providers/: chat_model.py  composition.py  embedding.py
src/rag_app/retrieval/: config.py  graph.py  prompts.py  schema.py  state.py
src/rag_app/utils/: utils.py
src/rag_core/: README.md
src/rag_core/config/: logging.py  settings.py
src/rag_core/index/: config.py  graph.py  mapping.py  prompts.py  schema.py  state.py
src/rag_core/loader/: loader.py  schema.py
src/rag_core/providers/: chat_model.py  composition.py  embedding.py  factory.py  vstore.py
src/rag_core/retrieval/: config.py  graph.py  prompts.py  state.py
src/rag_core/utils/: utils.py
tests/db_audit/integration/: test_audit.py
tests/integration/: test_rag_app.py
tests/integration/index/llm/: test_graph.py  test_llm_graph.py
tests/integration/index/ocr/: test_graph.py  test_ocr_graph.py
tests/integration/retrieval/: test_graph.py
tests/unit/: test_generate_questions_custom_factory.py  test_vstore.py
tests/unit/extractor/: test_extractor.py
