[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-core"
version = "0.1.0"
description = "LangGraph custom graph project"
requires-python = ">=3.12"
readme = "README.md"
authors = [
  { name = "LJackson412" }
]
keywords = ["rag", "langchain", "langgraph"]

dependencies = [
  # LangChain / LangGraph - v1-Linie
  "langchain>=1.1.3,<2.0",
  "langchain-core>=1.2.0,<2.0",
  "langchain-community>=0.4.1,<0.5.0",
  "langgraph>=1.0.5,<2.0",

  # Model-Integration 
  "langchain-openai>=1.1.3,<2.0",

  # Vectorstore 
  "langchain-chroma>=1.1.0,<2.0",

  # Dokumente 
  "pypdf>=6.4.2,<7.0",
  "pdf2image>=1.17.0,<2.0",
  "PyMuPDF>=1.26.7,<2.0",
  "unstructured[pdf,docx]>=0.18.21,<0.19.0",
  "msoffcrypto-tool>=5.4.2,<6.0",
  "openpyxl>=3.1.5,<4.0",

  # Misc
  "python-dotenv>=1.2.1,<2.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10.0",
  "pytest-asyncio>=1.3.0,<2.0",
  "langgraph-cli[inmem]>=0.4.9,<0.5.0",
  "mypy>=1.19.1,<2.0",
  "black>=25.12.0,<26.0",
  "ruff>=0.14.9,<0.15.0",
  "build>=1.2.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rag_core = ["py.typed"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

asyncio_mode = "auto" # async-Tests automatisch erkennen

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
  "^data/",
  "^dist/",
  "^build/",
  "^\\.venv/",
  "^\\.mypy_cache/",
]

plugins = ["pydantic.mypy"]

[tool.black]
line-length = 88          
target-version = ["py312"]
include = "src/|tests/"
exclude = '''
(
  /(\.venv|\.git|\.mypy_cache|dist|build|__pycache__)/
)
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501", "B905"]  # Beispiel

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]


